welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:3: error: z is already defined as variable z
	var z=Math.abs(10-b)
            ^close10:4: error: not found: value e
	if (z<e) {
              ^close10:7: error: not found: value e
		return e
                       ^