welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
	var z=Math.abs(10-a)
	var z=Math.abs(10-b)
	if (z<e) {
		return z
	} else {
		return e
	}
}
